2nd Day YRS2013 Commit - added back-end and some front-end bug fixes.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <link rel="icon" href="favicon.io">
         <title>Where Am I?</title>
     </head>
-    <body>
+    <body class='index'>
         <div class="wrap">
             <p><img src="web-logo.png" alt=""></p>
         
             <h1>Where Am I?</h1>
 
-            <form id="postcode-form" class="pure-form" method="get" action="info.html">
+            <form id="postcode-form" class="pure-form" method="get" action="info.php">
                 <fieldset>
                     <!--[if IE]>
                         <label for="postcode">Enter your postcode:</label>
