Added github ribbon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <title>Where Am I?</title>
     </head>
     <body class='index'>
+        <a href="https://github.com/hitecherik/WhereAmI" target="_blank"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
         <div class="wrap">
             <p><img src="web-logo.png" alt=""></p>
         
