SMall bug fixes and UI changes.

--- a/thanks.html
+++ b/thanks.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="css/style.css">
         <title>Thanks to... :: Where Am I?</title>
     </head>
-    <body>
+    <body class="thanks-html">
         <div class="wrap">
-            <p align="center"><img src="web-logo.png" alt=""></p>
+            <p align="center"><a href="index.php"><img src="img/web-logo.png" alt=""></a></p>
             <h1>Where Am I? wouldn't be possible without...</h1>
             
             <div class="pure-g-r">
@@ -29,11 +29,6 @@
                 
                 <div class="pure-u-1-2 pure-grid">
                     <h2>...these people:</h2>
-                    <!--<ul>-->
-                    <!--    <li>Ollie Cole - front-end programmer</li>-->
-                    <!--    <li>Alexander Nielsen - back-end programmer</li>-->
-                    <!--    <li>Anand Aggarwal - data collector and presentation writer</li>-->
-                    <!--</ul>-->
                     <table class="pure-table creators">
                         <tr><td>Ollie Cole</td><td>Front-end Programmer</td><td><a target="_blank" href="http://twitter.com/hive66">@hive66</a></td></tr>
                         <tr><td>Alexander Nielsen</td><td>Back-end Programmer</td><td><a target="_blank" href="http://twitter.com/hitecherik">@hitecherik</a></td></tr>
