Made bug fixes and code optimisations.

--- a/thanks.html
+++ b/thanks.html
@@ -23,6 +23,7 @@
                         <li><a href="http://git.io/_CIkmw">Paul Irish's Geolocation Polyfill</a></li>
                         <li><a href="http://purecss.io">Pure CSS Library</a></li>
                         <li><a href="http://uk-postcodes.com">UK Postcodes API</a></li>
+						<li><a href="http://www.openlylocal.com/">Openly Local API</a></li>
                         <li><a href="http://lokeshdhakar.com/projects/lightbox2/">Lightbox JS 2</a></li>
                     </ul>
                 </div>
@@ -32,7 +33,7 @@
                     <table class="pure-table creators">
                         <tr><td>Ollie Cole</td><td>Front-end Programmer</td><td><a target="_blank" href="http://twitter.com/hive66">@hive66</a></td></tr>
                         <tr><td>Alexander Nielsen</td><td>Back-end Programmer</td><td><a target="_blank" href="http://twitter.com/hitecherik">@hitecherik</a></td></tr>
-                        <tr><td>Anand Aggarwal</td><td>Data Collector and Presentation Writer</td><td><a target="_blank" href="http://twitter.com/anandaggarwal5">@anandaggarwal5</a></td></tr>
+                        <tr><td>Anand Aggarwal</td><td>Data Collector and Presentation Writer</td><td><a target="_blank" href="http://twitter.com/anando21">@anando21</a></td></tr>
                     </table>
                 </div>
             </div>
